# LQSVG

./: .gitignore  .pre-commit-config.yaml  Makefile  pylintrc  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: poetry-package.yml
experiments/: chapter3.ipynb  chapter4.ipynb  data.py  dpg_vs_maac.ipynb  dpg_vs_maac.py  eval_grads.ipynb  experiment.py  hparam_search.py  k-step_svg.ipynb  lqg.ipynb  lqr.ipynb  models.py  monte_carlo_quality.ipynb  perf_and_grad.ipynb  policy.py  suboptimality_gap.py  suboptimality_gap_search.py  svg_inf.ipynb  tqdm_util.py  true_svg.ipynb  utils.py  value_gradient_error.ipynb  value_gradient_error.py
experiments/ch3/: chapter3.ipynb
experiments/ch4/: chapter4.ipynb  dpg_vs_maac.py  hparam_search.py  suboptimality_gap.py
experiments/ch4/results/: BiasVarianceNorm-K=0,4,8-GradientQualityComparison-2021-05-28T12:04.csv  BiasVarianceNorm-K=2-GradientQualityComparison-2021-05-31T11:04.csv  Convergence-GradientQualityComparison-2021-05-25T15.20.csv
experiments/ch4/results/Experiment_2021-06-07_09-25-12/: basic-variant-state-2021-06-07_09-25-12.json
experiments/ch4/results/Experiment_2021-06-07_09-25-12/Experiment_67d8a_00000_0_env_seed=0,estimator=dpg,normalize_svg=True,policy_seed=0_2021-06-07_09-25-12/: events.out.tfevents.1623068712.LOGGI004112  params.json  params.pkl  progress.csv
experiments/ch4/results/Experiment_2021-06-07_09-25-12/Experiment_67d8a_00001_1_env_seed=1,estimator=dpg,normalize_svg=True,policy_seed=0_2021-06-07_09-25-12/: events.out.tfevents.1623068712.LOGGI004112  params.json  params.pkl  progress.csv
experiments/ch4/results/Experiment_2021-06-07_09-25-12/Experiment_67d8a_00002_2_env_seed=2,estimator=dpg,normalize_svg=True,policy_seed=0_2021-06-07_09-25-12/: events.out.tfevents.1623068712.LOGGI004112  params.json  params.pkl  progress.csv
experiments/ch4/results/Experiment_2021-06-07_09-25-12/Experiment_67d8a_00003_3_env_seed=3,estimator=dpg,normalize_svg=True,policy_seed=0_2021-06-07_09-25-12/: events.out.tfevents.1623068712.LOGGI004112  params.json  params.pkl  progress.csv
experiments/ch4/results/Experiment_2021-06-07_09-25-12/Experiment_67d8a_00004_4_env_seed=4,estimator=dpg,normalize_svg=True,policy_seed=0_2021-06-07_09-25-12/: events.out.tfevents.1623068712.LOGGI004112  params.json  params.pkl  progress.csv
experiments/ch4/results/SuboptimalityGap_2021-06-12_15-59-42/: basic-variant-state-2021-06-12_15-59-42.json
experiments/ch5/: actor.py  critic.py  data.py  debugging.ipynb  model.py  model_based_control.ipynb  model_based_control.py  model_based_prediction.ipynb  model_based_prediction.py  model_training.py  model_training_static_policy.py  prediction_roundup.ipynb  prediction_roundup.py  state_dict124.pt  svg.py  td_learning_static_policy.py  value_based_prediction.ipynb  value_based_prediction.py  wandb_util.py
experiments/notebooks/: lqr.ipynb  mpc-pytorch.ipynb  perf_and_grad.ipynb
experiments/preliminaries/: lqg_testing.ipynb  true_svg.ipynb  value_gradient_error.py
lqsvg/: __init__.py  analysis.py  data.py  estimator.py  estimators.py  lightning.py  np_util.py  random.py  tqdm_util.py  types.py
lqsvg/agents/: registry.py
lqsvg/envs/: __init__.py  registry.py  rewards.py  termination.py
lqsvg/envs/lqr/: __init__.py  generators.py  gym.py  named.py  simulator.py  solvers.py  types.py  utils.py
lqsvg/envs/lqr/modules/: __init__.py  general.py  utils.py
lqsvg/experiment/: analysis.py  data.py  dynamics.py  estimators.py  models.py  plot.py  policy.py  tqdm_util.py  types.py  utils.py  worker.py
lqsvg/policy/: modules.py  random.py  time_varying_linear.py
lqsvg/policy/modules/: __init__.py  initstate.py  policy.py  reward.py  transition.py  utils.py  value.py  wrappers.py
lqsvg/testing/: check.py  compare.py  fixture.py
lqsvg/torch/: modules.py  named.py  random.py  sequence.py  types.py  utils.py
lqsvg/torch/nn/: __init__.py  cholesky.py  diagscale.py  distributions.py  env.py  initstate.py  policy.py  reward.py  transition.py  utils.py  value.py  wrappers.py
lqsvg/torch/nn/dynamics/: __init__.py  gauss.py  linear.py  segment.py  transition.py
tests/: conftest.py  mock_env.py  pylintrc
tests/lqsvg/: conftest.py  test_analysis.py  test_estimators.py  test_np_util.py
tests/lqsvg/envs/: test_basic.py  test_rewards.py  test_termination.py
tests/lqsvg/envs/lqr/: conftest.py  test_generators.py  test_gym.py  test_solvers.py  test_utils.py  utils.py
tests/lqsvg/experiment/: conftest.py  test_analysis.py  test_data.py  test_estimators.py  test_models.py
tests/lqsvg/policy/: test_time_varying_linear.py
tests/lqsvg/policy/modules/: conftest.py  test_initstate.py  test_policy.py  test_transition.py  test_utils.py  test_value.py
tests/lqsvg/torch/: conftest.py  test_modules.py  test_named.py  test_utils.py
tests/lqsvg/torch/nn/: conftest.py  test_cholesky.py  test_initstate.py  test_policy.py  test_reward.py  test_transition.py  test_utils.py  test_value.py
(+1940 files in other folders)
