[tool.poetry]
name = "lqsvg"
version = "0.1.0"
description = ""
authors = ["Ângelo Lovatto <angelolovatto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
raylab = "^0.15.10"
ray = {extras = ["rllib", "tune"], version = "1.2.0"}
pandas = "<1.4.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.1"
ipywidgets = "^7.6.3"
tqdm = "^4.61.0"
ipython = "^7.24.1"
pre-commit = "^2.13.0"
wandb = "^0.11.1"
pylint = "^2.9.6"
pytest = "^6.2.3"
black = {extras = ["d"], version = "^21.5b2"}
flake8 = "^3.9.2"
sklearn = "^0.0"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
pytest-mock = "^3.6.1"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.9.3"
watchdog = "^2.1.2"
pytest-cov = "^2.12.1"
hyperopt = "^0.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:"@coroutine" decorator is deprecated since Python 3.8:DeprecationWarning:aiohttp',
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc'*.:DeprecationWarning:ray",
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc'*.:DeprecationWarning:tree",
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc'*.:DeprecationWarning:watchdog",
    'ignore:`np.object` is a deprecated alias*.:DeprecationWarning:tensorboard',
    'ignore:`np.bool` is a deprecated alias*.:DeprecationWarning:tensorboard',
    'ignore:Named tensors and all their associated APIs are an experimental feature*.:UserWarning:torch',
]
