[tool.poetry]
name = "lqsvg"
version = "0.1.0"
description = ""
authors = ["Ângelo Lovatto <angelolovatto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ray = {extras = ["rllib", "tune"], version = "<1.6"}
pandas = "<1.4.0"
nnrl = "^0.1.0"
opencv-contrib-python = "^4.5.3"
pytorch-lightning = "^1.4.6"
sklearn = "^0.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
hyperopt = "^0.2.5"
jupyterlab = "^3.1.11"
ipywidgets = "^7.6.4"
tqdm = "^4.62.2"
wandb = "^0.12.6"
more-itertools = "^8.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.27.0"
pre-commit = "^2.15.0"
pylint = "^2.11.1"
pytest = "^6.2.5"
black = {extras = ["d"], version = "^21.9b0"}
flake8 = "^3.9.2"
pytest-mock = "^3.6.1"
jupyterlab-code-formatter = "^1.4.10"
isort = "^5.9.3"
watchdog = "^2.1.5"
pytest-cov = "^2.12.1"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:"@coroutine" decorator is deprecated since Python 3.8:DeprecationWarning:aiohttp',
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc'*.:DeprecationWarning:ray",
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc'*.:DeprecationWarning:tree",
    "ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc'*.:DeprecationWarning:watchdog",
    'ignore:`np.object` is a deprecated alias*.:DeprecationWarning:tensorboard',
    'ignore:`np.bool` is a deprecated alias*.:DeprecationWarning:tensorboard',
    'ignore:Named tensors and all their associated APIs are an experimental feature*.:UserWarning:torch',
]
